feat: add propper lombok detection support